--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,14 +29,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: "zulu"
-          kotlin-version: "1.6.10"
+          java-version: "12.x"
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
       - run: flutter build appbundle
 
   build_ios:
