--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,13 +29,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: "16.x"
+          distribution: 'zulu'
+          java-version: "11"
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk --release
+      - run: flutter build apk
+      - run: flutter build appbundle
 
   build_ios:
     name: Flutter Build iOS
