--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -36,8 +36,12 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build apk --debug --split-per-abi
+      - name: Push to Releases
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/debug/*"
+          tag: $
 
   build_ios:
     name: Flutter Build iOS
