--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,8 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          distribution: 'zulu'
-          java-version: "11"
+          java-version: "16.x"
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
@@ -41,8 +40,7 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/debug/*"
-          tag: $
-
+          
   build_ios:
     name: Flutter Build iOS
     needs: [flutter_test]
