--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -55,6 +55,11 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
+      - run: flutter build ios --no-codesign
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-ios
+          path: build/ios/iphoneos/app.ipa
 
   build_web:
     name: Flutter Build web
