--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: release-ios
-          path: build/ios/iphoneos/app.ipa
+          artifacts: "build/app/outputs/apk/debug/*,build/ios/iphoneos/app.ipa"
 
   build_web:
     name: Flutter Build web
