--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -65,7 +65,7 @@ jobs:
       - uses: actions/upload-artifact@v1
       - name: release-ios
         with:
-          artifacts: "build/app/outputs/apk/release/*.apk,build/ios/iphoneos/app.ipa"
+          artifacts: "build/ios/iphoneos/app.ipa"
 
   build_web:
     name: Flutter Build web
