--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -56,7 +56,7 @@ jobs:
       - run: flutter pub get
       - run: flutter clean
       - run: |
-          flutter build ios --no-codesign
+          flutter build ios --release --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
           ln -s ../Runner.app
