--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: release-apk
-          path: build/app/outputs/apk/release/*.apk
+          path: build/app/outputs/apk/release/release-apk.apk
 
   build_ios:
     name: Flutter Build iOS
