--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -57,6 +57,15 @@ jobs:
       - run: flutter clean
       - run: |
           flutter build ios --release --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
+      - uses: actions/upload-artifact@v1
+      - name: release-ios
+        with:
+          artifacts: "build/ios/iphoneos/app.ipa"
 
   build_web:
     name: Flutter Build web
