--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -56,10 +56,10 @@ jobs:
       - run: flutter pub get
       - run: flutter clean
       - run: |
-          flutter build ios
+          flutter build ios --release --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
-          ln ../Runner.app
+          ln -s ../Runner.app
           cd ..
           zip -r app.ipa Payload
 
@@ -77,4 +77,10 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build web
+      - run: |
+          flutter build web
+          cd build/web
+          zip -r web-app.zip .
+      - uses: subosito/flutter-action@v2
+        with:
+          artifacts: 'build/web/web-app.zip'
