--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -80,4 +80,4 @@ jobs:
           zip -r web-app.zip .
       - uses: subosito/flutter-action@v2
         with:
-          artifacts: 'build/web/web-app.zip'
+          path: build/web/*.zip
