--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -68,3 +68,30 @@ jobs:
           name: release-ios
           path: build/ios/Release-iphoneos/Runner.app
   
+  build_web:
+    name: Flutter Build web
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "8.x"
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build web
+      - uses: actions/upload-artifact@v2
+        with:
+          path: build/web
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./build
+      - name: Deploy to gh-pages
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: ./build
