--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -94,4 +94,4 @@ jobs:
       - name: Deploy to gh-pages
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./build
+          path: ./build
