--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -90,3 +90,11 @@ jobs:
         with:
           name: release-web
           path: build/web/web-app.zip
+      - uses: actions/download-artifact@v1
+        with:
+          name: release-web
+          path: build/web/web-app.zip
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          path: build/web/web-app.zip
+          url: 'https://mukulkolpe.github.io/Movies-App/'
